Add bitrate to AudioEncoderConfig
Fixes #151

--- a/index.src.html
+++ b/index.src.html
@@ -1481,6 +1481,7 @@ dictionary AudioEncoderConfig {
   required DOMString codec;
   unsigned long sampleRate;
   unsigned long numberOfChannels;
+  unsigned long long bitrate;
 };
 </xmp>
 </pre>
@@ -1503,6 +1504,11 @@ run these steps:
 
   <dt><dfn dict-member for=AudioEncoderConfig>numberOfChannels</dfn></dt>
   <dd>The number of audio channels.</dd>
+
+  <dt><dfn dict-member for=AudioEncoderConfig>bitrate</dfn></dt>
+  <dd>
+    The average bitrate of the encoded audio given in units of bits per second.
+  </dd>
 </dl>
 
 
