Minor IDL fixes.
Fixes #164

--- a/index.src.html
+++ b/index.src.html
@@ -169,8 +169,7 @@ The <dfn>codec processing loop</dfn> must run these steps:
 AudioDecoder Interface {#audiodecoder-interface}
 ================================================
 
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 [Exposed=(Window,DedicatedWorker)]
 interface AudioDecoder {
   constructor(AudioDecoderInit init);
@@ -194,7 +193,6 @@ dictionary AudioDecoderInit {
 
 callback AudioFrameOutputCallback = undefined(AudioFrame output);
 </xmp>
-</pre>
 
 Internal Slots {#audiodecoder-internal-slots}
 ---------------------------------------------
@@ -398,8 +396,7 @@ Algorithms {#audiodecoder-algorithms}
 VideoDecoder Interface {#videodecoder-interface}
 ================================================
 
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 [Exposed=(Window,DedicatedWorker)]
 interface VideoDecoder {
   constructor(VideoDecoderInit init);
@@ -423,7 +420,6 @@ dictionary VideoDecoderInit {
 
 callback VideoFrameOutputCallback = undefined(VideoFrame output);
 </xmp>
-</pre>
 
 Internal Slots {#videodecoder-internal-slots}
 ---------------------------------------------
@@ -645,8 +641,7 @@ Algorithms {#videodecoder-algorithms}
 AudioEncoder Interface {#audioencoder-interface}
 ================================================
 
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 [Exposed=(Window,DedicatedWorker)]
 interface AudioEncoder {
   constructor(AudioEncoderInit init);
@@ -670,7 +665,6 @@ dictionary AudioEncoderInit {
 
 callback EncodedAudioChunkOutputCallback = undefined(EncodedAudioChunk output);
 </xmp>
-</pre>
 
 Internal Slots {#audioencoder-internal-slots}
 ---------------------------------------------
@@ -885,8 +879,7 @@ Algorithms {#audioencoder-algorithms}
 VideoEncoder Interface {#videoencoder-interface}
 ================================================
 
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 [Exposed=(Window,DedicatedWorker)]
 interface VideoEncoder {
   constructor(VideoEncoderInit init);
@@ -910,7 +903,6 @@ dictionary VideoEncoderInit {
 
 callback EncodedVideoChunkOutputCallback = undefined(EncodedVideoChunk output, VideoDecoderConfig? output_config);
 </xmp>
-</pre>
 
 Internal Slots {#videoencoder-internal-slots}
 ---------------------------------------------
@@ -1217,14 +1209,12 @@ Signalling Configuration Support{#config-support-info}
 ------------------------------------------------------
 
 ### AudioDecoderSupport ### {#audio-decoder-support}
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 dictionary AudioDecoderSupport {
   boolean supported;
   AudioDecoderConfig config;
 };
 </xmp>
-</pre>
 
 <dl>
   <dt><dfn dict-member for=AudioDecoderSupport>supported</dfn></dt>
@@ -1240,14 +1230,12 @@ dictionary AudioDecoderSupport {
 </dl>
 
 ### VideoDecoderSupport ### {#video-decoder-support}
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 dictionary VideoDecoderSupport {
   boolean supported;
   VideoDecoderConfig config;
 };
 </xmp>
-</pre>
 
 <dl>
   <dt><dfn dict-member for=VideoDecoderSupport>supported</dfn></dt>
@@ -1263,14 +1251,12 @@ dictionary VideoDecoderSupport {
 </dl>
 
 ### AudioEncoderSupport ### {#audio-encoder-support}
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 dictionary AudioEncoderSupport {
   boolean supported;
   AudioEncoderConfig config;
 };
 </xmp>
-</pre>
 
 <dl>
   <dt><dfn dict-member for=AudioEncoderSupport>supported</dfn></dt>
@@ -1286,14 +1272,12 @@ dictionary AudioEncoderSupport {
 </dl>
 
 ### VideoEncoderSupport ### {#video-encoder-support}
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 dictionary VideoEncoderSupport {
   boolean supported;
   VideoEncoderConfig config;
 };
 </xmp>
-</pre>
 
 <dl>
   <dt><dfn dict-member for=VideoEncoderSupport>supported</dfn></dt>
@@ -1331,8 +1315,7 @@ combination of codec registrations or none at all.
 
 AudioDecoderConfig{#audio-decoder-config}
 -----------------------------------------
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 dictionary AudioDecoderConfig {
   required DOMString codec;
   required unsigned long sampleRate;
@@ -1340,7 +1323,6 @@ dictionary AudioDecoderConfig {
   BufferSource description;
 };
 </xmp>
-</pre>
 
 To check if an {{AudioDecoderConfig}} is a <dfn>valid AudioDecoderConfig</dfn>,
     run these steps:
@@ -1370,8 +1352,7 @@ To check if an {{AudioDecoderConfig}} is a <dfn>valid AudioDecoderConfig</dfn>,
 
 VideoDecoderConfig{#video-decoder-config}
 -----------------------------------------
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 dictionary VideoDecoderConfig {
   required DOMString codec;
   BufferSource description;
@@ -1386,7 +1367,6 @@ dictionary VideoDecoderConfig {
   HardwareAcceleration hardwareAcceleration = "allow";
 };
 </xmp>
-</pre>
 
 To check if a {{VideoDecoderConfig}} is a <dfn>valid VideoDecoderConfig</dfn>,
 run these steps:
@@ -1475,15 +1455,13 @@ run these steps:
 
 AudioEncoderConfig{#audio-encoder-config}
 -----------------------------------------
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 dictionary AudioEncoderConfig {
   required DOMString codec;
   unsigned long sampleRate;
   unsigned long numberOfChannels;
 };
 </xmp>
-</pre>
 
 NOTE: Codec-specific extensions to {{AudioEncoderConfig}} may be defined by the
     registrations in the [[WEBCODECS-CODEC-REGISTRY]].
@@ -1508,8 +1486,7 @@ run these steps:
 
 VideoEncoderConfig{#video-encoder-config}
 -----------------------------------------
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 dictionary VideoEncoderConfig {
   required DOMString codec;
   unsigned long long bitrate;
@@ -1520,7 +1497,6 @@ dictionary VideoEncoderConfig {
   HardwareAcceleration hardwareAcceleration = "allow";
 };
 </xmp>
-</pre>
 
 NOTE: Codec-specific extensions to {{VideoEncoderConfig}} may be defined by the
     registrations in the [[WEBCODECS-CODEC-REGISTRY]].
@@ -1606,15 +1582,13 @@ To check if a {{VideoEncoderConfig}} is a <dfn>valid VideoEncoderConfig</dfn>,
 
 Hardware Acceleration{#hardware-acceleration}
 ---------------------------------------------
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 enum HardwareAcceleration {
   "allow",
   "deny",
   "require",
 };
 </xmp>
-</pre>
 
 When supported, hardware acceleration offloads encoding or decoding to
 specialized hardware.
@@ -1686,13 +1660,11 @@ keys and values. For nested dictionaries, apply this definition recursively.
 VideoEncoderEncodeOptions{#video-encoder-options}
 -------------------------------------------------
 
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 dictionary VideoEncoderEncodeOptions {
   boolean keyFrame = false;
 };
 </xmp>
-</pre>
 
 <dl>
   <dt><dfn dict-member for=VideoEncoderEncodeOptions>keyFrame</dfn></dt>
@@ -1706,15 +1678,13 @@ dictionary VideoEncoderEncodeOptions {
 
 CodecState{#codec-state}
 ------------------------
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 enum CodecState {
   "unconfigured",
   "configured",
   "closed"
 };
 </xmp>
-</pre>
 
 <dl>
   <dt><dfn enum-value for=CodecState>unconfigured</dfn></dt>
@@ -1733,11 +1703,9 @@ enum CodecState {
 
 WebCodecsErrorCallback{#error-callback}
 ---------------------------------------
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 callback WebCodecsErrorCallback = undefined(DOMException error);
 </xmp>
-</pre>
 
 
 Encoded Media Interfaces (Chunks) {#encoded-media-interfaces}
@@ -1746,8 +1714,7 @@ These interfaces represent chunks of encoded media.
 
 EncodedAudioChunk Interface {#encodedaudiochunk-interface}
 ------------------------------------------------------------
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 [Exposed=(Window,DedicatedWorker)]
 interface EncodedAudioChunk {
   constructor(EncodedAudioChunkInit init);
@@ -1767,7 +1734,6 @@ enum EncodedAudioChunkType {
     "delta",
 };
 </xmp>
-</pre>
 
 ### Constructors ###{#encodedaudiochunk-constructors}
 <dfn constructor for=EncodedAudioChunk title="EncodedAudioChunk(init)">
@@ -1793,8 +1759,7 @@ enum EncodedAudioChunkType {
 
 EncodedVideoChunk Interface{#encodedvideochunk-interface}
 -----------------------------------------------------------
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 [Exposed=(Window,DedicatedWorker)]
 interface EncodedVideoChunk {
   constructor(EncodedVideoChunkInit init);
@@ -1816,7 +1781,6 @@ enum EncodedVideoChunkType {
     "delta",
 };
 </xmp>
-</pre>
 
 ### Constructors ###{#encodedvideochunk-constructors}
 <dfn constructor for=EncodedVideoChunk title="EncodedVideoChunk(init)">
@@ -1854,8 +1818,7 @@ These interfaces represent unencoded (raw) media.
 AudioFrame Interface {#audioframe-interface}
 ---------------------------------------------
 
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 [Exposed=(Window,DedicatedWorker)]
 interface AudioFrame {
   constructor(AudioFrameInit init);
@@ -1869,7 +1832,6 @@ dictionary AudioFrameInit {
   required AudioBuffer buffer;
 };
 </xmp>
-</pre>
 
 ### Internal Slots ###{#audioframe-internal-slots}
 <dl>
@@ -1919,8 +1881,7 @@ dictionary AudioFrameInit {
 VideoFrame Interface {#videoframe-interface}
 --------------------------------------------
 
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 [Exposed=(Window,DedicatedWorker)]
 interface VideoFrame {
   constructor(ImageBitmap imageBitmap, optional VideoFrameInit frameInit = {});
@@ -1961,7 +1922,6 @@ dictionary VideoFrameInit {
   unsigned long long timestamp;
 };
 </xmp>
-</pre>
 
 ### Internal Slots ###{#videoframe-internal-slots}
 <dl>
@@ -2209,8 +2169,8 @@ A {{Plane}} cannot be used after the {{VideoFrame}} is destroyed. A new
     it possible to efficiently add an alpha plane to an existing {{VideoFrame}}.
 
 
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
+[Exposed=(Window,DedicatedWorker)]
 interface Plane {
   readonly attribute unsigned long stride;
   readonly attribute unsigned long rows;
@@ -2225,7 +2185,6 @@ dictionary PlaneInit {
   required unsigned long rows;
 };
 </xmp>
-</pre>
 
 ### Internal Slots ###{#plane-internal-slots}
 <dl>
@@ -2269,13 +2228,11 @@ NOTE: This section needs work. We expect to add more pixel formats and offer
     http://www.fourcc.org/pixel-format/yuv-i420/</a> for a more complete
     description.
 
-<pre class='idl'>
-<xmp>
+<xmp class='idl'>
 enum PixelFormat {
   "I420"
 };
 </xmp>
-</pre>
 
 <dl>
   <dt><dfn enum-value for=PixelFormat>I420</dfn></dt>
