--- a/index.src.html
+++ b/index.src.html
@@ -1739,7 +1739,7 @@ enum EncodedAudioChunkType {
 
 ### Internal Slots ### {#encodedaudiochunk-internal-slots}
 : <dfn attribute for=EncodedAudioChunk>[[internal data]]</dfn></dt>
-:: An array of bytes repsenting the encoded chunk data.
+:: An array of bytes representing the encoded chunk data.
 
 ### Constructors ###{#encodedaudiochunk-constructors}
 <dfn constructor for=EncodedAudioChunk title="EncodedAudioChunk(init)">
@@ -1800,7 +1800,7 @@ enum EncodedVideoChunkType {
 
 ### Internal Slots ### {#encodedvideochunk-internal-slots}
 : <dfn attribute for=EncodedVideoChunk>[[internal data]]</dfn></dt>
-:: An array of bytes repsenting the encoded chunk data.
+:: An array of bytes representing the encoded chunk data.
 
 ### Constructors ###{#encodedvideochunk-constructors}
 <dfn constructor for=EncodedVideoChunk title="EncodedVideoChunk(init)">
