Clarify registry review process.
Fixes #170.

--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -64,8 +64,8 @@ Registration Entry Requirements {#registration-entry-requirements}
     suffix must be represented by an asterisk and the registration must link to
     a public specification describing how to fully qualify the variable portion
     of the string.
-3. If the described codec requires that codec-specific bytes be provided as part
-    of the {{VideoDecoderConfig.description}} or the
+3. If the described codec requires that codec-specific bytes be provided as
+    part of the {{VideoDecoderConfig.description}} or the
     {{AudioDecoderConfig.description}}, the registration must link to
     a public specification describing how to populate these fields.
 4. If the {{AudioEncoderConfig}} or {{VideoEncoderConfig}}
@@ -75,7 +75,10 @@ Registration Entry Requirements {#registration-entry-requirements}
 4. Candidate entries must be announced by filing an issue in the
     [WebCodecs GitHub issue tracker](https://github.com/w3c/webcodecs/issues/)
     so they can be discussed and evaluated for compliance before being added to
-    the registry.
+    the registry. If registry editors reach consesnus to accept the candidate,
+    a pull request should be drafted (either by editors or by the party
+    requesting the candidate registration) to register the candidate. The
+    registry editors will review and merge the pull request.
 
 Audio Codec Registry {#audio-codec-registry}
 ============================================
