--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -75,7 +75,7 @@ Registration Entry Requirements {#registration-entry-requirements}
 4. Candidate entries must be announced by filing an issue in the
     [WebCodecs GitHub issue tracker](https://github.com/w3c/webcodecs/issues/)
     so they can be discussed and evaluated for compliance before being added to
-    the registry. If registry editors reach consesnus to accept the candidate,
+    the registry. If registry editors reach consensus to accept the candidate,
     a pull request should be drafted (either by editors or by the party
     requesting the candidate registration) to register the candidate. The
     registry editors will review and merge the pull request.
