Switch to w3c/spec-prod to automate publication to /TR
The code currently relies on Travis CI to update the gh-pages branch. This
update replaces that with the w3c/spec-prod action and enables automatic
publication of the specs as working drafts to /TR whenever a change gets pushed
to the main branch.

The update also switches to the new NOTE-ED status in Bikeshed, which makes it
possible to drop the "Text macro" workaround, see discussion in:
https://github.com/tabatkins/bikeshed/pull/1999#issuecomment-819321482

--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -1,7 +1,7 @@
 <pre class='metadata'>
 Title: WebCodecs Codec Registry
 Repository: w3c/webcodecs
-Status: ED
+Status: NOTE-ED
 Shortname: webcodecs-codec-registry
 Level: none
 Group: mediawg
@@ -13,7 +13,6 @@ Editor: Paul Adenot, w3cid 62410, Mozilla https://www.mozilla.org/
 Editor: Bernard Aboba, w3cid 65611, Microsoft Corporation https://www.microsoft.com/
 
 Boilerplate: omit conformance
-Text macro: NOTE yes
 
 Abstract: This registry is intended to enhance interoperability among
     implementations and users of [[WEBCODECS]]. In particular, this
